--- a/cvmodule/public/index.html
+++ b/cvmodule/public/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" href="./assets/img/favicon.png">
+    <link rel="stylesheet" href="https://unpkg.com/primeicons@6.0.1/primeicons.css">
     <title>React App</title>
   </head>
   <body>
